fixed sponsor image stretching issue

--- a/src/pages/sponsorship/style.less
+++ b/src/pages/sponsorship/style.less
@@ -70,6 +70,7 @@
       margin-left: 0px;
       img {
           height: 10vh;
+          object-fit: contain;
           max-width: 25vw;
       }
     }
